methods.picture.MethodsPictureLarge.scala.error
Erreur de compilation :
MethodsPictureLarge:39: error: identifier expected but ')' found.
    setCouleurBrosse(Color.)
                           ^MethodsPictureLarge:42: error: identifier expected but ')' found.
    setCouleurBrosse(Color.)
                           ^MethodsPictureLarge:46: error: identifier expected but ')' found.
  setCouleurBrosse(Color.)
                         ^